--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             text-align: center;
             font-family: 'Josefin Sans', sans-serif;
         }
+        a {
+            font-size:14px;
+        }
 
         h2, h3, h4 {
             font-family: 'Josefin Sans', sans-serif;
@@ -114,6 +117,7 @@
         .block {
             margin: 3px;
             margin-bottom: 50px;
+            overflow: auto;
         }
 
         .white {
@@ -347,19 +351,16 @@
             showVideoControls: false
         });
     </script>
-    <div class="block"></div>
 
 
 
 
-
+    <div class="block headline">
+        <h2 class="widetext">FOLLOW</h2>
+    </div>
 
 
     <div class="block bgblack">
-        <div>
-            <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
-        </div>
-
         <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank"><img class="button" src="images/instagram.png" height="200px"/></a>
         <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="button" src="images/instagram.png" height="200px"/></a>
         <a href="https://500px.com/kinastudio" target="_blank"><img class="button" src="images/500px.png" height="200px"/></a>
@@ -380,9 +381,6 @@
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
             Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie.</p>
     </div>
-
-
-
 
 
 
@@ -470,7 +468,26 @@
                   data-autocenter="2"></span>
         </div>
         <script type="text/javascript">jssor_2_slider_init();</script>
+    </div>
+
+
+
+    <div class="block headline">
+        <h2 class="widetext">CONTACT</h2>
+    </div>
+
+
+
+    <div class="block bgblack">
+
+
         <img class="img-block" src="images/kinastudio_web_info.jpg"/>
+
+        <div>
+            <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
+        </div>
+
+
     </div>
 
 
