--- a/index.html
+++ b/index.html
@@ -75,6 +75,28 @@
             width: 100%;
         }
 
+
+        .button {
+            background: #000;
+            display: inline-block;
+            padding: 7px 10px;
+            border: 0;
+            color: #FFFFFF;
+            font-size: 14px;
+            font-weight: normal;
+            font-family: 'Josefin Sans', sans-serif;
+            line-height: 19px;
+            text-align: center;
+            text-transform: uppercase;
+            vertical-align: middle;
+            white-space: nowrap;
+            text-decoration: none;
+            padding-top: 9px;
+            margin:20px;
+        }
+
+
+
         .body {
             margin: 0;
             padding: 0;
@@ -503,7 +525,7 @@
 <div class="subnav"></div>
 
 <p>&copy; 2016 KINA.studio. Stuttgart City.</p>
-<a href="imprint.html" target="_blank">Impressum</a>
+<a class="button" href="imprint.html" target="_blank">Impressum</a>
 
 <div class="block-separator"></div>
 
