--- a/imprint.html
+++ b/imprint.html
@@ -170,12 +170,8 @@ Holderäckerstr. 10<br />
 70499 Stuttgart
 </p>
 <h2>Kontakt:</h2>
-<table><tr>
-<td>Telefon:</td>
-<td>+4917687416078</td></tr>
-<tr><td>E-Mail:</td>
-<td>info@kina.studio</td>
-</tr></table>
+<p>Telefon:+4917687416078</p>
+<p>E-Mail: info@kina.studio</p>
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
 <p>Kyryl (Kikko) Nadobnykh<br />
 Holderäckerstr. 10<br />
