--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
             width: 40%;
         }
 
+        .white {
+            color: white;
+        }
+
         li {
             display: inline; /* li nebeneinander anzeigen */
             list-style-type: none; /* ohne Aufzählungspunkte */
@@ -502,8 +506,18 @@
 
     <div class="block bgblack">
 
+        <!--<img class="img-block" src="images/kinastudio_web_info.jpg"/>-->
 
-        <img class="img-block" src="images/kinastudio_web_info.jpg"/>
+        <h3 class="white">KINA.studio bietet folgende Leistungen:</h3>
+
+        <p class="white">Fotografie für: Produkte. Fashion. Portrait. Business.</p>
+        <p class="white">Weboptimierung: E-Commerce. Portale. Social Media.</p>
+        <p class="white">Videos für: Produkte. Fashion. 360°.</p>
+
+        <h3 class="white">Schreiben Sie eine Email oder rufen Sie direkt an:</h3>
+
+        <p class="white">E-Mail: info@kina.studio</p>
+        <p class="white">Telefon: +49 (176) 874 16 078</p>
 
         <div>
             <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
