--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         }
 
         .white {
-            color: white;
+            color: #f0f0f0;
         }
 
         .bgblack {
@@ -508,21 +508,17 @@
 
         <!--<img class="img-block" src="images/kinastudio_web_info.jpg"/>-->
 
-        <h3 class="white">KINA.studio bietet folgende Leistungen:</h3>
-
-        <p class="white">Fotografie für: Produkte. Fashion. Portrait. Business.</p>
-        <p class="white">Weboptimierung: E-Commerce. Portale. Social Media.</p>
-        <p class="white">Videos für: Produkte. Fashion. 360°.</p>
-
-        <h3 class="white">Schreiben Sie eine Email oder rufen Sie direkt an:</h3>
-
+        <br><br>
+        <p class="white">Produkte. Fashion. Portrait. Business.</p>
+        <p class="white">E-Commerce. Portale. Web.</p>
+        <h4 class="white">JETZT KONTAKTIEREN</h4>
         <p class="white">E-Mail: info@kina.studio</p>
         <p class="white">Telefon: +49 (176) 874 16 078</p>
+        <br><br>
 
         <div>
             <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
         </div>
-
 
     </div>
 
