--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
 
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
+        <h4>Produkte. Fashion. Portrait. Business. E-Commerce. Portale. Web.</h4>
         <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
@@ -508,17 +509,14 @@
 
         <!--<img class="img-block" src="images/kinastudio_web_info.jpg"/>-->
 
-        <br><br>
-        <p class="white">Produkte. Fashion. Portrait. Business.</p>
-        <p class="white">E-Commerce. Portale. Web.</p>
-        <h4 class="white">JETZT KONTAKTIEREN</h4>
-        <p class="white">E-Mail: info@kina.studio</p>
-        <p class="white">Telefon: +49 (176) 874 16 078</p>
-        <br><br>
-
         <div>
             <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
         </div>
+
+        <br><br>
+        <p class="white">E-Mail: info@kina.studio</p>
+        <p class="white">Telefon: +49 (176) 874 16 078</p>
+        <br><br>
 
     </div>
 
