--- a/index.html
+++ b/index.html
@@ -396,10 +396,11 @@
 
 
 
-
+    <div class="block headline">
+        <h4>Produkte. Fashion. Portrait. Business.<br>E-Commerce. Portale. Web.</h4>
+    </div>
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
-        <h4>Produkte. Fashion. Portrait. Business. E-Commerce. Portale. Web.</h4>
         <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
