--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
 
     <div class="block headline">
-        <h4>Produkte. Fashion. Portrait. Business.<br>E-Commerce. Portale. Web.</h4>
+        <h2 style="font-size:16px;">Produkte. Fashion. Portrait. Business.<br>E-Commerce. Portale. Web.</h2>
     </div>
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
