--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         p {
             margin: 5px; 
             text-align: center;
-            font-family: 'Josefin Sans', sans-serif;
         }
         a {
             font-size:14px;
@@ -354,7 +353,7 @@
 
 
     <div class="block headline">
-        <h2 class="widetext">PHOTOGRAPHY & FILM</h2>
+        <h2 class="widetext">PORTFOLIO</h2>
     </div>
 
 
@@ -397,7 +396,7 @@
 
 
     <div class="block headline">
-        <h2 style="font-size:16px;">Produkte. Fashion. Portrait. Business.<br>E-Commerce. Portale. Web.</h2>
+        <p>Produkte. Fashion. Portrait. Business.<br>E-Commerce. Portale. Web.</p>
     </div>
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
