--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             padding: 7px 10px;
             border: 0;
             color: #FFFFFF;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: normal;
             font-family: 'Josefin Sans', sans-serif;
             line-height: 19px;
@@ -252,7 +252,7 @@
 
 <div class="topnav"></div>
 <img class="header" src="images/kina-studio-stuttgart.png"/>
-<div class="subnav"><h3 class="widetext">find your inspiration</h3></div>
+<div class="subnav"><h4 class="widetext">find your inspiration</h4></div>
 <div class="wrapper">
     <div class="block bgblack">
         <script type="text/javascript">
@@ -394,19 +394,21 @@
 
 
 
-
-    <div class="block headline">
-        <p>Produkte. Fashion. Portrait. Business.<br>E-Commerce. Portale. Web.</p>
-    </div>
-
     <div class="block" style="margin-left:10%;margin-right:10%;">
+
+        <h4>Produkte. Fashion. Portrait. Business.</h4>
         <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
-            Werbevideos einsteigen. Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
+            Werbevideos einsteigen. </p>
+
+        <h4>E-Commerce. Portale. Web.</h4>
+
+        <p>Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
             Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie.</p>
+
     </div>
 
 
