--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         p, a {
             color: #000;
             font-family: Helvetica, sans-serif;
-            font-size: 16px;
-            line-height: 20px;
+            font-size: 13px;
+            line-height: 16px;
             letter-spacing: .8px;
         }
 
         p {
             margin: 5px; 
             text-align: center;
+            font-family: 'Josefin Sans', sans-serif;
         }
         a {
             font-size:14px;
