--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 <div class="topnav"></div>
 <img class="header" src="images/kina-studio-stuttgart.png"/>
-<div class="subnav"><h4 class="widetext">find your inspiration</h4></div>
+<div class="subnav"><p class="widetext">find your inspiration</p></div>
 <div class="wrapper">
     <div class="block bgblack">
         <script type="text/javascript">
