--- a/imprint.html
+++ b/imprint.html
@@ -157,7 +157,7 @@
         <h2 class="widetext">IMPRESSUM</h2>
     </div>
 
-    <div class="block" style="margin-left:10%;margin-right:10%;">
+    <div class="block">
         
 
 
@@ -224,7 +224,7 @@ Holderäckerstr. 10<br />
 
 <div class="subnav"></div>
 
-<p>&copy; 2016 KINA.studio. Stuttgart City.</p>
+<p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
 <input type="button" class="button" value="Schließen" onclick="self.close()">
 <div class="block-separator"></div>
 
