--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         p {
             margin: 5px; 
-            text-align: center;
+            text-align: justify;
             font-family: 'Josefin Sans', sans-serif;
         }
         a {
@@ -152,10 +152,6 @@
 
         .two {
             width: 40%;
-        }
-
-        .white {
-            color: white;
         }
 
         li {
@@ -397,7 +393,7 @@
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
 
-        <h4>Produkte. Fashion. Portrait. Business.</h4>
+        <h4>Produkte. Fashion. Portraits.</h4>
         <p>Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
@@ -535,7 +531,7 @@
 
 <div class="subnav"></div>
 
-<p>&copy; 2016 KINA.studio. Stuttgart City.</p>
+<p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
 <a class="button" href="imprint.html" target="_blank">Impressum</a>
 
 <div class="block-separator"></div>
