--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         p, a {
             color: #000;
             font-family: Helvetica, sans-serif;
-            font-size: 13px;
+            font-size: 12px;
             line-height: 16px;
             letter-spacing: .8px;
         }
@@ -33,7 +33,7 @@
         p {
             margin: 5px; 
             text-align: center;
-            font-family: 'Josefin Sans', sans-serif;
+            font-family: Lato, Helvetica, Arial;
         }
 
         p.info {
@@ -41,7 +41,7 @@
         }
 
         a {
-            font-size:14px;
+            font-size:13px;
         }
 
         h2, h3, h4 {
@@ -398,14 +398,14 @@
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
 
-        <h4>Produkte. Fashion. Portraits.</h4>
+        <h3>Produkte. Fashion. Portraits.</h3>
         <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
             Werbevideos einsteigen. </p>
 
-        <h4>E-Commerce. Portale. Web.</h4>
+        <h3>E-Commerce. Portale. Web.</h3>
 
         <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
