--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@
         </div>
 
         <br><br>
-        <p class="white">E-Mail: info@kina.studio</p>
-        <p class="white">Telefon: +49 (176) 874 16 078</p>
+        <h3 class="white">E-Mail: info@kina.studio</h3>
+        <h3 class="white">Telefon: +49 (176) 874 16 078</h3>
         <br><br>
 
     </div>
