--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         .bgblack {
             background-color: #000;
         }
+        
+        .halftext {
+            max-width: 400px
+        }
 
         li {
             display: inline; /* li nebeneinander anzeigen */
@@ -393,6 +397,7 @@
 
     <div class="block" style="margin-left:10%;margin-right:10%;">
 
+        <div class="block halftext">
         <h3>Produkte. Fashion. Portraits.</h3>
         
         <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
@@ -400,13 +405,14 @@
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. 
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
             Werbevideos einsteigen. </p>
-
+        </div>    
+        <div class="block halftext">
         <h3>E-Commerce. Portale. Web.</h3>
 
         <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
             Schicken Sie uns einfach eine kurze Mail und wir beraten Sie gerne in allen Fragen zum Thema Fotografie.</p>
-
+        </div>
     </div>
 
 
