--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         }
 
         p {
-            margin: 5px; 
             text-align: center;
         }
 
         p.info {
             text-align: justify;
+            max-width: 800px;
+            margin: auto;
         }
 
         a {
