--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
 
 
-    <div class="block" style="margin-left:10%;margin-right:10%;">
+    <div class="block" style="margin-left:10px;margin-right:10px;">
 
         <h3>Produkte. Fashion. Portraits.</h3>
         
