--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 
     <div class="block headline">
-        <h2 class="widetext">PORTFOLIO</h2>
+        <h2 class="widetext">GET INSPIRED</h2>
     </div>
 
 
@@ -379,7 +379,7 @@
 
 
     <div class="block headline">
-        <h2 class="widetext">FOLLOW</h2>
+        <h2 class="widetext">FOLLOW US</h2>
     </div>
 
 
