--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
         h2.widetext {
             margin-top: 12px;
         }
-
+        
+        .saletext {
+            letter-spacing: 1px;
+            color: #9f2943;
+        }
 
         .headline {
             margin: 0 0 30px 0;
@@ -250,7 +254,7 @@
 
 <div class="topnav"></div>
 <img class="header" src="images/kina-studio-stuttgart.png"/>
-<div class="subnav"><h4 class="widetext">Like our facebook page and get 20% off for next shooting!</h4></div>
+<div class="subnav"><h4 class="saletext">Like our facebook page and get 20% off for next shooting!</h4></div>
 <div class="wrapper">
     <div class="block bgblack">
         <script type="text/javascript">
