--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         .saletext {
             letter-spacing: 1px;
             color: #9f2943;
+            max-width: 800px;
         }
 
         .headline {
