--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             letter-spacing: 1px;
             color: #9f2943;
             max-width: 800px;
+            margin: auto;
         }
 
         .headline {
