--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             color: #9f2943;
             max-width: 800px;
             margin: auto;
+            font-size: 13px;
+            margin-top: 3px;
         }
 
         .headline {
@@ -256,7 +258,11 @@
 
 <div class="topnav"></div>
 <img class="header" src="images/kina-studio-stuttgart.png"/>
-<div class="subnav"><h4 class="saletext">Like our facebook page and get 20% off for next shooting!</h4></div>
+<div class="subnav">
+    <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank">
+        <h4 class="saletext">Like our facebook page and get 20% off for next shooting!</h4>
+    </a>
+</div>
 <div class="wrapper">
     <div class="block bgblack">
         <script type="text/javascript">
