--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
         }
     </style>
 
+    <!-- INSTAGRAM FIXES -->
+    body .instagram-photo img {
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        transform: scale(1.1);
+        -webkit-backface-visibility: hidden;
+    }
+    
+    
     <!-- SLIDER STUFF -->
     <style>
         .jssorb05 {
