--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             font-size: 14px;
             margin-top: 5px;
         }
+        @media (min-width: 1030px) {
+            .saletext { font-size: 18px; }
+        }
 
         .headline {
             margin: 0 0 30px 0;
