--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             color: #9f2943;
             max-width: 800px;
             margin: auto;
-            font-size: 14px;
+            font-size: 16px;
             margin-top: 5px;
         }
-        @media (min-width: 820px) {
+        /*@media (min-width: 820px) {
             .saletext { font-size: 18px; }
-        }
+        }*/
 
         .headline {
             margin: 0 0 30px 0;
