--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             max-width: 800px;
             margin: auto;
             font-size: 15px;
-            margin-top: 5px;
+            margin-top: 10px;
+            margin-bottom: 8px;
         }
         @media (min-width: 961px) {
             .saletext { font-size: 18px; }
