--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
 
 
     <div class="block bgblack">
-        <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank"><img class="socialbutton" src="images/facebook.png" height="180px"/></a>
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px.png" height="180px"/></a>
-        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram.png" height="180px"/></a>
+        <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
+        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
+        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
     </div>
 
 
