--- a/black.html
+++ b/black.html
@@ -133,7 +133,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #333;
+            background-color: #ffffff;
         }
 
         .topnav {
@@ -310,7 +310,7 @@
 
 <div class="topnav"></div>
 <div class="block bgblack">
-    <img class="header" src="images/kina-studio-stuttgart-white.png"/>
+    <img class="header" src="images/kina-studio-stuttgart-white.jpg"/>
 </div>
 <div class="subnav">
     <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank">
