--- a/white.html
+++ b/white.html
@@ -317,7 +317,7 @@
 <div class="wrapper">
     
     <div class="block header">
-        <img class="logo" src="images/kina-studio-stuttgart.jpg"/>
+        <img class="logo" src="images/kina-studio-stuttgart.png"/>
     </div>
 
     <div class="block">
