--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             max-width: 800px;
             margin: auto;
             font-size: 18px;
-            margin-top: 10px;
-            margin-bottom: 8px;
+            margin-top: 5px;
+            margin-bottom: 4px;
+            text-decoration: blink;
         }
         
-
         .headline {
             margin: 0 0 30px 0;
             text-align: center;
@@ -228,8 +228,8 @@
                 width: 100%;
                 min-width: 160px;
                 max-width: 160px;
-                margin-top: 10px;
-                margin-bottom: 0px;
+                margin-top: 5px;
+                margin-bottom: -5px;
             }            
         }
         
