--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             margin-top: 12px;
         }
         
-        .saletext {
+        .saletext, a.saletext {
             letter-spacing: 1px;
             color: #9f2943;
             max-width: 800px;
@@ -94,7 +94,7 @@
             font-size: 18px;
             margin-top: 5px;
             margin-bottom: 4px;
-            text-decoration: blink;
+            text-decoration: none;
         }
         
         .headline {
