--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
     <div class="block" style="margin-left:10px;margin-right:10px;">
 
-        <h3>Produkte. Fashion. Portraits.</h3>
+        <h3>PRODUKTE. FASHION. PORTRAITS.</h3>
         
         <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
@@ -501,7 +501,7 @@
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
             Werbevideos einsteigen. </p>
 
-        <h3>E-Commerce. Portale. Web.</h3>
+        <h3>E-COMMERCE. PORTALE. WEB.</h3>
 
         <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
