--- a/index.html
+++ b/index.html
@@ -614,8 +614,9 @@
         </div>
 
         <br><br>
-        <h3 class="white">E-Mail: info@kina.studio</h3>
-        <h3 class="white">Telefon: +49 (176) 874 16 078</h3>
+        <h3 class="white">EMAIL: </h3><p>info@kina.studio</p>
+        <br>
+        <h3 class="white">TELEFON: </h3><p>+49 (176) 874 16 078<p>
         <br><br>
 
     </div>
