--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
         h3 { font-size: 20px; }
         h4 { font-size: 16px; }
 
+        .middletext {
+            letter-spacing: 2px;
+        }
+        
         .widetext {
-            letter-spacing: 15px;
+            letter-spacing: 12px;
             margin: 8px;
         }
 
@@ -493,7 +497,7 @@
 
     <div class="block" style="margin-left:10px;margin-right:10px;">
 
-        <h3>PRODUKTE. FASHION. PORTRAITS.</h3>
+        <h4>PRODUKTE. FASHION. PORTRAITS.</h4>
         
         <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. 
@@ -501,7 +505,7 @@
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
             Werbevideos einsteigen. </p>
 
-        <h3>E-COMMERCE. PORTALE. WEB.</h3>
+        <h4>E-COMMERCE. PORTALE. WEB.</h4>
 
         <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
@@ -614,9 +618,9 @@
         </div>
 
         <br><br>
-        <h3 class="white">EMAIL: </h3><p>info@kina.studio</p>
+        <h4 class="white middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
         <br>
-        <h3 class="white">TELEFON: </h3><p>+49 (176) 874 16 078<p>
+        <h4 class="white middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
         <br><br>
 
     </div>
