--- a/index.html
+++ b/index.html
@@ -618,9 +618,12 @@
         </div>
 
         <br><br>
-        <h4 class="white middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
-        <br>
-        <h4 class="white middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
+        <div style="float:left; width:40%">
+            <h4 class="white middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
+        </div>
+        <div style="float:right; width:40%">
+            <h4 class="white middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
+        </div>
         <br><br>
 
     </div>
