--- a/index.html
+++ b/index.html
@@ -618,11 +618,13 @@
         </div>
 
         <br><br>
-        <div style="float:left; width:40%">
+        <div style="max-width:600px">
+        <div style="float:left; width:49%">
             <h4 class="white middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
         </div>
-        <div style="float:right; width:40%">
+        <div style="float:right; width:49%">
             <h4 class="white middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
+        </div>
         </div>
         <br><br>
 
