--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             max-width: 600px;
             margin: auto;
             margin-bottom: 50px;
-            padding: 50px;
+            padding-bottom: 50px;
         }
         
         @media (max-width: 600px) {
