--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
         a {
             font-size:13px;
+            text-decoration: none;
         }
 
         h2, h3, h4 {
@@ -90,7 +91,7 @@
             margin-top: 12px;
         }
         
-        .saletext, a.saletext {
+        .saletext {
             letter-spacing: 1px;
             color: #9f2943;
             max-width: 800px;
@@ -98,7 +99,6 @@
             font-size: 18px;
             margin-top: 5px;
             margin-bottom: 4px;
-            text-decoration: none;
         }
         
         .headline {
