--- a/index.html
+++ b/index.html
@@ -213,10 +213,8 @@
         }
         
         .contacts {
-            max-width: 600px;
+            max-width: 420px;
             margin: auto;
-            margin-bottom: 50px;
-            padding-bottom: 50px;
         }
         
         @media (max-width: 600px) {
@@ -616,24 +614,20 @@
 
 
 
-    <div class="block bgblack">
-
-        <!--<img class="img-block" src="images/kinastudio_web_info.jpg"/>-->
+    <div class="block bgwhite">
 
         <div>
             <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
         </div>
 
-        <br><br>
         <div class="contacts">
             <div style="float:left; width:49%">
-                <h4 class="white middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
+                <h4 class="middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
             </div>
-            <div style="float:right; width:49%; border-left: solid white 1px;">
-                <h4 class="white middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
+            <div style="float:right; width:49%; border-left: solid #ccc 1px;">
+                <h4 class="middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
             </div>
         </div>
-        <br><br>
 
     </div>
 
