--- a/index.html
+++ b/index.html
@@ -615,20 +615,14 @@
 
 
     <div class="block bgwhite">
-
-        <div>
-            <img class="img-block" src="images/kinastudio_web_moment.jpg"/>
-        </div>
-
         <div class="contacts">
             <div style="float:left; width:49%">
-                <h4 class="middletext">EMAIL: </h4><p class="white">info@kina.studio</p>
+                <h4 class="middletext">EMAIL: </h4><p>info@kina.studio</p>
             </div>
             <div style="float:right; width:49%; border-left: solid #ccc 1px;">
-                <h4 class="middletext">TELEFON: </h4><p class="white">+49 (176) 874 16 078<p>
+                <h4 class="middletext">TELEFON: </h4><p>+49 (176) 874 16 078<p>
             </div>
         </div>
-
     </div>
 
 
