--- a/imprint.html
+++ b/imprint.html
@@ -3,6 +3,17 @@
 <head>
 
     <!-- CUSTOM STUFF -->
+    
+    <!-- CUSTOM STUFF -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>KINA.studio - Impressum.</title>
+    <meta name="description" content="Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten, Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen. Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter. Darüber hinaus können Sie mit uns in die Welt der Produkt- und Werbevideos einsteigen." />
+    <meta name="robots" content="INDEX,NOFOLLOW" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+
+    
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600" rel="stylesheet">
     <meta charset="utf-8"/>
     <style>
@@ -19,7 +30,7 @@
             text-align: justify;
         }
         a {
-            font-size:14px;
+            font-size:13px;
         }
 
         h2, h3, h4 {
