--- a/imprint.html
+++ b/imprint.html
@@ -33,10 +33,11 @@
             font-size:13px;
         }
 
-        h2, h3, h4 {
+        h1, h2, h3, h4 {
             font-family: 'Josefin Sans', sans-serif;
         }
 
+        h1 { font-size: 26px; }
         h2 { font-size: 24px; }
         h3 { font-size: 20px; }
         h4 { font-size: 16px; }
