--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
     </div>
     <script>
         $('.instagram').instagramElement({
-            mode : 'user',
+            mode : 'tag',
+            tag : 'kinastudio',
             userID : '2066076364',
             accessToken : '2066076364.1677ed0.5ab10341f5d347d58704d8f01ad8a2b9',
             galleryMode: 'classic',
