--- a/index.html
+++ b/index.html
@@ -463,11 +463,6 @@
     </div>
 
 
-
-
-
-
-
     <!-- INSTAGRAM -->
     <div class="block">
         <div class="instagram"></div>
@@ -475,7 +470,7 @@
     <script>
         $('.instagram').instagramElement({
             mode : 'tag',
-            tag : 'kinastudio',
+            tag : 'kinainspire',
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
