--- a/index.html
+++ b/index.html
@@ -613,10 +613,10 @@
     <div class="block bgwhite">
         <div class="contacts">
             <div style="float:left; width:49%">
-                <h4 class="middletext">EMAIL: </h4><p>info@kina.studio</p>
+                <h4 class="middletext">EMAIL: </h4><p><a href="mailto:info@kina.studio">info@kina.studio</a></p>
             </div>
             <div style="float:right; width:49%; border-left: solid #ccc 1px;">
-                <h4 class="middletext">TELEFON: </h4><p>+49 (176) 874 16 078<p>
+                <h4 class="middletext">TELEFON: </h4><p><a href="tel:+49 (176) 874 16 078" data-rel="external">+49 (176) 874 16 078</a></p>
             </div>
         </div>
     </div>
