--- a/index.html
+++ b/index.html
@@ -216,6 +216,19 @@
             max-width: 420px;
             margin: auto;
         }
+        .icon {
+            display: inline-block;
+            background-position: center;
+            width: 30px;
+            height: 30px;
+            background-repeat: no-repeat;
+        }
+        .icon-whatsapp {
+            background-image: url('images/whatsapp.png');
+        }
+        .icon-mail {
+            background-image: url('images/mail.png');
+        }
         
         @media (max-width: 600px) {
             
@@ -613,9 +626,11 @@
     <div class="block bgwhite">
         <div class="contacts">
             <div style="float:left; width:49%">
+                <p class="icon icon-mail"></p>
                 <h4 class="middletext">EMAIL: </h4><p><a href="mailto:info@kina.studio">info@kina.studio</a></p>
             </div>
             <div style="float:right; width:49%; border-left: solid #ccc 1px;">
+                <p class="icon icon-whatsapp"></p>
                 <h4 class="middletext">TELEFON: </h4><p><a href="tel:+49 (176) 874 16 078" data-rel="external">+49 (176) 874 16 078</a></p>
             </div>
         </div>
