--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
             width: 30px;
             height: 30px;
             background-repeat: no-repeat;
+            background-size: 100%;
         }
         .icon-whatsapp {
             background-image: url('images/whatsapp.png');
