--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
             max-width: 420px;
             margin: auto;
         }
+        .contacts h4 {
+            margin-top:0px;
+        }
         .icon {
             display: inline-block;
             background-position: center;
