--- a/index.html
+++ b/index.html
@@ -256,7 +256,11 @@
                 max-width: 160px;
                 margin-top: 5px;
                 margin-bottom: -5px;
-            }            
+            }     
+            .icon {
+                width: 16px;
+                height: 16px;
+            }
         }
         
     </style>
