--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
             height: 24px;
             background-repeat: no-repeat;
             background-size: 100%;
+            margin:8px;
         }
         .icon-whatsapp {
             background-image: url('images/whatsapp.png');
