--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
         
         p, a {
             color: #000;
-            font-family: Lato, Helvetica, Arial;
             font-size: 13px;
             line-height: 18px;
             letter-spacing: .8px;
+        }
+        
+        p, a, h4 {
+            font-family: Lato,Helvetica Neue,Verdana,Arial,sans-serif;
         }
 
         p {
