--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <script>
         $('.instagram').instagramElement({
             mode : 'tag',
-            tag : 'kinainspire',
+            tag : 'kinastudio_inspire',
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
