--- a/index.html
+++ b/index.html
@@ -455,14 +455,18 @@
             <div data-u="slides"
                  style="cursor: default; position: relative; top: 0px; left: 0px; width: 1200px; height: 500px; overflow: hidden;">
                 <div data-p="225.00" style="display: none;">
-                    <img data-u="image" src="images/slider/photo1.jpg"/>
+                    <a href="#contact-title">
+                        <img data-u="image" src="images/slider/photo1.jpg"/>
+                    </a>
                 </div>
+                <!--
                 <div data-p="225.00" data-po="80% 55%" style="display: none;">
                     <img data-u="image" src="images/slider/photo2.jpg"/>
                 </div>
                 <div data-p="225.00" data-po="80% 55%" style="display: none;">
                     <img data-u="image" src="images/slider/photo3.jpg"/>
                 </div>
+-->
             </div>
             <!-- Bullet Navigator -->
             <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
@@ -632,7 +636,7 @@
 
 
 
-    <div class="block headline">
+    <div id="contact-title" class="block headline">
         <h2 class="widetext">CONTACT</h2>
     </div>
 
