--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     <div class="block">
         <div class="instagram-kinastudio-inspire"></div>
         <a href="https://www.instagram.com/explore/tags/kinastudio_inspire/" target="_blank">
-            <p>GET MORE ON INSTAGRAM...</p>
+            <h4>GET MORE ON INSTAGRAM...</h4>
         </a>
     </div>
     <script>
@@ -524,7 +524,7 @@
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
         <a href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">
-            <p>GET MORE ON INSTAGRAM...</p>
+            <h4>GET MORE ON INSTAGRAM...</h4>
         </a>
     </div>
     <script>
