--- a/index.html
+++ b/index.html
@@ -497,9 +497,7 @@
     <!-- INSTAGRAM -->
     <div class="block">
         <div class="instagram-kinastudio-inspire"></div>
-        <a href="https://www.instagram.com/explore/tags/kinastudio_inspire/" target="_blank">
-            <p class="middletext">GET MORE ON INSTAGRAM...</p>
-        </a>
+        <a class="button" href="https://www.instagram.com/explore/tags/kinastudio_inspire/" target="_blank">Mehr anzeigen ></a>
     </div>
     <script>
         $('.instagram-kinastudio-inspire').instagramElement({
@@ -523,9 +521,7 @@
     <!-- INSTAGRAM -->
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
-        <a href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">
-            <p class="middletext">GET MORE ON INSTAGRAM...</p>
-        </a>
+        <a class="button" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr anzeigen ></a>
     </div>
     <script>
         $('.instagram-kinastudio-fashion').instagramElement({
