--- a/index.html
+++ b/index.html
@@ -141,6 +141,23 @@
             padding-top: 9px;
             margin:20px;
         }
+        
+        .whitebutton {
+            background: #000;
+            display: inline-block;
+            padding: 7px 10px;
+            font-size: 16px;
+            font-weight: normal;
+            font-family: Lato, Helvetica-Neue, sans-serif;
+            line-height: 19px;
+            text-align: center;
+            text-transform: uppercase;
+            vertical-align: middle;
+            white-space: nowrap;
+            text-decoration: none;
+            margin: 20px;
+            border: black solid 1px;
+        }
 
 
 
@@ -497,7 +514,7 @@
     <!-- INSTAGRAM -->
     <div class="block">
         <div class="instagram-kinastudio-inspire"></div>
-        <a class="button" href="https://www.instagram.com/explore/tags/kinastudio_inspire/" target="_blank">Mehr anzeigen ></a>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_inspire/" target="_blank">Mehr anzeigen ></a>
     </div>
     <script>
         $('.instagram-kinastudio-inspire').instagramElement({
@@ -521,7 +538,7 @@
     <!-- INSTAGRAM -->
     <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
-        <a class="button" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr anzeigen ></a>
+        <a class="whitebutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr anzeigen ></a>
     </div>
     <script>
         $('.instagram-kinastudio-fashion').instagramElement({
