--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@
         }
         
         .whitebutton {
-            background: #000;
+            background: #ffffff;
+            color: #000000;
             display: inline-block;
-            padding: 7px 10px;
+            padding: 14px 20px;
             font-size: 16px;
             font-weight: normal;
             font-family: Lato, Helvetica-Neue, sans-serif;
@@ -158,7 +159,10 @@
             margin: 20px;
             border: black solid 1px;
         }
-
+        .whitebutton:hover {
+            background: #000000;
+            color: #ffffff;
+        }
 
 
         .body {
