--- a/index.html
+++ b/index.html
@@ -634,8 +634,9 @@
 
 <div class="topline"></div>
 
-<p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
-<a class="button" href="imprint.html" target="_blank">Impressum</a>
 
+<a class="whitebutton" href="imprint.html" target="_blank">Impressum</a>
+<p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
+    
 </body>
 </html>
