--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 </head>
 
 
-<body class="body">
+<body id="body" class="body">
 <div class="wrapper">
     
     <div class="block bgblack header mobile">
@@ -636,6 +636,7 @@
 
 
 <a class="whitebutton" href="imprint.html" target="_blank">Impressum</a>
+<a class="whitebutton" href="#body" target="_blank">Nach oben</a>
 <p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
     
 </body>
