--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
 </head>
 
 
-<body id="body" class="body">
-<div class="wrapper">
+<body class="body">
+<div id="start" class="wrapper">
     
     <div class="block bgblack header mobile">
         <img class="logo" src="images/kina-studio-stuttgart-white.jpg"/>
@@ -636,7 +636,7 @@
 
 
 <a class="whitebutton" href="imprint.html" target="_blank">Impressum</a>
-<a class="whitebutton" href="#body" target="_blank">Nach oben</a>
+<a class="whitebutton" href="#start">Nach oben</a>
 <p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
     
 </body>
