--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@
             background: #000000;
             color: #ffffff;
         }
+        
+        .link {
+            color: #000000;
+            display: inline-block;
+            font-weight: normal;
+            font-family: Lato, Helvetica-Neue, sans-serif;
+            line-height: 19px;
+            text-align: center;
+            text-transform: uppercase;
+            vertical-align: middle;
+            white-space: nowrap;
+            text-decoration: none;
+            margin: 20px;
+        }
 
 
         .body {
@@ -635,8 +649,8 @@
 <div class="topline"></div>
 
 
-<a class="whitebutton" href="imprint.html" target="_blank">Impressum</a>
-<a class="whitebutton" href="#start">Nach oben</a>
+<a class="link" href="imprint.html" target="_blank">Impressum</a>
+<a class="link" href="#start">Nach oben</a>
 <p style="text-align: center;">&copy; 2016 KINA.studio. Stuttgart City.</p>
     
 </body>
