--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
             transform: scale(1.0);
             -webkit-backface-visibility: hidden;
         }
+        
+        .instagram-element .instagram-photo { margin: 0 10px 0 0; width: 23%; }
     </style>
     
     <!-- SLIDER STUFF -->
