--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
+            limit: 12,
             video: true,
             showVideoControls: false
         });
@@ -568,6 +569,7 @@
             userID : '2066076364',
             accessToken : '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
+            limit: 12,
             video: true,
             showVideoControls: false
         });
