--- a/index.html
+++ b/index.html
@@ -285,6 +285,14 @@
             position: fixed;
             bottom: 20px;
             right: 0px;
+            display: inline-block;
+            background-position: center;
+            width: 50px;
+            height: 50px;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            margin:0px;
+            background-image: url('images/gotostartbutton.png');
         }
         
         .instagram-element .instagram-photo {
