--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
         .gotostartbutton {
             position: fixed;
             bottom: 20px;
-            right: 0px;
+            right: 10px;
             display: inline-block;
             background-position: center;
-            width: 50px;
-            height: 50px;
+            width: 30px;
+            height: 30px;
             background-repeat: no-repeat;
             background-size: 100%;
             margin:0px;
@@ -668,6 +668,6 @@
 <a class="link" href="imprint.html" target="_blank">Impressum</a> 
 <p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
    
-<div class="gotostartbutton desktop"><a class="link" href="#start">Nach oben</a></div>
+<div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
 </html>
