--- a/index.html
+++ b/index.html
@@ -293,7 +293,12 @@
             background-size: 100%;
             margin:0px;
             background-image: url('images/gotostartbutton.png');
+            opacity: 0.6;
         }
+        .gotostartbutton:hover {
+            opacity: 1;
+        }
+        
         
         .instagram-element .instagram-photo {
             margin: 0.1%;
