--- a/index.html
+++ b/index.html
@@ -608,8 +608,8 @@
 
     <div class="block bgblack">
         <a href="https://www.facebook.com/KINAstudio-1611943032444429/" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
         <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
+        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
     </div>
 
 
@@ -626,7 +626,7 @@
             Darüber hinaus können Sie mit uns in die Welt der Produkt- und
             Werbevideos einsteigen. </p>
 
-        <h4>E-COMMERCE. PORTALE. WEB.</h4>
+        <h4>E-COMMERCE. PORTALE. PRINT.</h4>
 
         <p class="info">Alle Medien werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben die besten Erlebnisse machen können. 
