--- a/index.html
+++ b/index.html
@@ -670,8 +670,9 @@
 <div class="topline"></div>
 
 
-📷<p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
- | <a class="link" href="imprint.html" target="_blank">Impressum</a> 
+📷 
+<a class="link" href="imprint.html" target="_blank">Impressum</a> 
+<p style="text-align: center; display: inline;">&copy; 2016 KINA.studio. Stuttgart City.</p>
    
 <div class="desktop"><a class="gotostartbutton link" title="Nach oben" href="#start"></a></div>
 </body>
