--- a/imprint.html
+++ b/imprint.html
@@ -34,7 +34,7 @@
         }
 
         h1, h2, h3, h4 {
-            font-family: 'Josefin Sans', sans-serif;
+            font-family: Lato, Helvetica-Neue, sans-serif;
         }
 
         h1 { font-size: 26px; }
@@ -95,7 +95,7 @@
         .body {
             margin: 0;
             padding: 0;
-            text-align: center;
+            text-align: left;
             background-color: #fff;
         }
 
