--- a/imprint.html
+++ b/imprint.html
@@ -54,7 +54,7 @@
 
         .headline {
             margin: 0 0 30px 0;
-            text-align: center;
+            text-align: left;
             text-transform: uppercase;
             font-size: 20px;
             border-bottom: 1px solid #000;
@@ -109,8 +109,8 @@
 
         img.header {
             width: 100%;
-            min-width: 280px;
-            max-width: 320px;
+            min-width: 220px;
+            max-width: 220px;
             margin-bottom: 10px;
         }
 
